0.6.5/_sources/guides/_layerlist_events.md
                                                                                                                                          
|  Event                              |  Description                                                                |  Event.value type  |
|-------------------------------------|-----------------------------------------------------------------------------|--------------------|
|  `layers.events.inserting`          |  emitted before an item is inserted at ``index``                            |                    |
|  `layers.events.inserted`           |  emitted after ``value`` is inserted at ``index``                           |                    |
|  `layers.events.removing`           |  emitted before an item is removed at ``index``                             |                    |
|  `layers.events.removed`            |  emitted after ``value`` is removed at ``index``                            |                    |
|  `layers.events.moving`             |  emitted before an item is moved from ``index`` to ``new_index``            |                    |
|  `layers.events.moved`              |  emitted after ``value`` is moved from ``index`` to ``new_index``           |                    |
|  `layers.events.changed`            |  emitted when item at ``index`` is changed from ``old_value`` to ``value``  |                    |
|  `layers.events.reordered`          |  emitted when the list is reordered (eg. moved/reversed).                   |                    |
|  `layers.selection.events.active`   |                                                                             |                    |
|  `layers.selection.events.changed`  |                                                                             |                    |
                                                                                                                                          